examples/test/testpolicy3673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3673
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key19: value29
      key37: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key44: value48
          key3: value23
      podSelector:
        matchLabels:
          key6: value36
          key9: value1
          key7: value32
